@@ -1,4 +1,11 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 18 Jul 2018 Released 2.1.0 version
+* emoji-picker: Show a concise description of a selected emoji in the header bar
+* Update the setup UI when settings are changed outside of the setup UI
+* Migrate IBusConfig to GSettings
+* Read emoji data files always in UTF-8
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 27 Jun 2018 Released 2.0.2 version
 * Better Tab handling, use Tab to switch to the next candidate, not to commit
 
